--- a/custom_components/acond_pro_heat_pump/manifest.json
+++ b/custom_components/acond_pro_heat_pump/manifest.json
@@ -2,11 +2,11 @@
   "domain": "acond_pro_heat_pump",
   "name": "Acond Pro Heat Pump",
   "codeowners": [
-    "@ludeeus"
+    "@piotrekcrash"
   ],
   "config_flow": true,
-  "documentation": "https://github.com/ludeeus/acond_pro_heat_pump",
+  "documentation": "https://github.com/piotrekcrash/acond_pro_heat_pump",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/ludeeus/acond_pro_heat_pump/issues",
+  "issue_tracker": "https://github.com/piotrekcrash/acond_pro_heat_pump/issues",
   "version": "0.1.0"
 }
