chnage domain add consts

--- a/custom_components/acond_pro_heat_pump/manifest.json
+++ b/custom_components/acond_pro_heat_pump/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "acond_pro_heat_pump",
+  "domain": "acond",
   "name": "Acond Pro Heat Pump",
   "codeowners": [
     "@piotrekcrash"
@@ -8,5 +8,5 @@
   "documentation": "https://github.com/piotrekcrash/acond_pro_heat_pump",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/piotrekcrash/acond_pro_heat_pump/issues",
-  "version": "0.1.0"
+  "version": "1.0.0"
 }
